# FitOps-CLI

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.sh  llms.txt  pyproject.toml
.claude/: settings.local.json
.claude/commands/: fitops.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/copilot-instructions.d/: fitops.md
.github/workflows/: deploy-docs.yaml  python-package.yml
.planning/: ROADMAP.md  STATE.md  feature-gaps.md  status.md
docs/: architecture.md  oauth-flow.md  output-format.md  roadmap.md  strava-endpoints.md
docs/customerfacing/: README.md  roadmap.md
docs/official/: README.md  comparison.md  index.md  package-lock.json  package.json  roadmap.md
fitops/: docs_urls.py
fitops/analytics/: activity_insights.py  activity_splits.py  (+19 more)
tests/: test_activities_get.py  test_admin_recompute_power.py  test_analytics.py  test_athlete_profile.py  test_auth.py  test_cli_performance.py  test_dashboard_activity_power.py  test_dashboard_overview.py  test_dashboard_performance.py  test_dashboard_stream_charts.py  test_dashboard_styles.py  test_event_sync.py  test_improvements.py  test_models.py  test_oauth.py  test_output.py  test_performance_metrics.py  test_phase4.py  test_race.py  test_race_analysis.py  test_race_plan.py  test_race_results.py  test_running_power.py  test_stamp.py  test_strava_webhooks.py  test_sync.py  test_training_load_snapshot.py  test_weather.py  test_workout_segments.py  test_workout_simulation.py  test_workout_summary.py  test_workouts.py
(+215 files in other folders)
